docs: add user guide and update README with PR guidelines
Change-Id: I4c648e944313a85e4da1c10fdc8d477288a10e4c